--- a/package.json
+++ b/package.json
@@ -30,34 +30,34 @@
     "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watch\""
   },
   "dependencies": {
-    "@quasar/extras": "^1.4.2",
+    "@quasar/extras": "^1.5.2",
+    "core-js": "^2.6.11",
     "dagre-d3": "^0.6.4",
     "fromentries": "^1.2.0",
     "lodash": "^4.17.15",
     "marked": "^0.7.0",
     "parse-duration": "^0.1.2",
-    "plotly.js-basic-dist": "^1.51.3",
+    "plotly.js-basic-dist": "^1.52.3",
     "portal-vue": "^1.5.1",
-    "pouchdb": "^7.1.1",
-    "quasar": "^1.7.3",
-    "query-string": "^6.9.0",
+    "pouchdb": "^7.2.1",
+    "quasar": "^1.9.7",
+    "query-string": "^6.11.1",
     "svg-path-properties": "^0.4.11",
     "url-safe-string": "^1.1.0",
     "vue": "^2.6.11",
     "vue-class-component": "^6.3.2",
-    "vue-property-decorator": "^8.3.0",
-    "vue-router": "^3.1.3",
-    "vue-split-panel": "^1.0.4",
+    "vue-property-decorator": "^8.4.0",
+    "vue-router": "^3.1.6",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/preset-typescript": "^7.7.7",
-    "@quasar/app": "^1.5.1",
+    "@babel/core": "^7.8.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@quasar/app": "^1.6.0",
     "@quasar/quasar-app-extension-testing": "^1.0.0",
     "@quasar/quasar-app-extension-testing-unit-jest": "^1.0.0",
     "@quasar/quasar-app-extension-typescript": "^1.0.0-beta.2",
@@ -83,15 +83,15 @@
     "fibers": "^4.0.2",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "git-describe": "^4.0.4",
-    "jest": "^25.0.0",
-    "node-sass": "^4.13.0",
-    "request": "^2.88.0",
+    "jest": "^25.1.0",
+    "node-sass": "^4.13.1",
+    "request": "^2.88.2",
     "request-promise-native": "^1.0.8",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^8.0.2",
     "ts-loader": "^6.2.1",
     "tsargs": "^1.4.0",
     "tsutils": "^3.17.1",
-    "typescript": "^3.7.4",
+    "typescript": "^3.8.3",
     "vue-template-compiler": "^2.6.11",
     "vuex-module-decorators": "^0.9.11"
   },
