--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,8 +62,7 @@ steps:
   env:
     BUILDX_URL: https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64
 
-- bash: |
-    echo $(DOCKER_PASSWORD) | docker login -u $(DOCKER_USER) --password-stdin
+- bash: echo $(DOCKER_PASSWORD) | docker login -u $(DOCKER_USER) --password-stdin
   displayName: Docker login
   condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
 
