--- a/package.json
+++ b/package.json
@@ -48,8 +48,6 @@
     "svg-path-properties": "^0.4.11",
     "url-safe-string": "^1.1.0",
     "vue": "^2.6.11",
-    "vue-class-component": "^6.3.2",
-    "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.3"
@@ -85,7 +83,6 @@
     "eslint-plugin-vue": "^5.2.3",
     "fibers": "^4.0.2",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
-    "git-describe": "^4.0.4",
     "jest": "^25.2.7",
     "minimist": "^1.2.5",
     "node-sass": "^4.13.1",
@@ -94,7 +91,10 @@
     "tsargs": "^1.4.0",
     "tsutils": "^3.17.1",
     "typescript": "^3.8.3",
+    "vue-class-component": "^6.3.2",
+    "vue-property-decorator": "^8.4.1",
     "vue-template-compiler": "^2.6.11",
+    "vuex-class-modules": "^1.1.2",
     "vuex-module-decorators": "^0.9.11"
   },
   "engines": {
