--- a/package.json
+++ b/package.json
@@ -94,8 +94,7 @@
     "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^8.4.1",
     "vue-template-compiler": "^2.6.11",
-    "vuex-class-modules": "^1.1.2",
-    "vuex-module-decorators": "^0.9.11"
+    "vuex-class-modules": "^1.1.2"
   },
   "engines": {
     "node": ">= 10.13.0",
