--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "noUnusedLocals": false,
     "sourceMap": true,
     "allowJs": true,
+    "outDir": "out",
     "baseUrl": ".",
     "paths": {
       "@/*": [
