--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "minimist": "^1.2.5",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
+    "svgpath": "^2.2.3",
     "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.2",
     "tsargs": "^1.4.0",
