--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -33,8 +33,8 @@ services:
 
   # sparkey:
   #   volumes:
-  #     - "../brewblox-devcon-spark/:/app/"
+  #     - ../brewblox-devcon-spark/brewblox_devcon_spark:/app/brewblox_devcon_spark
 
   # spock:
   #   volumes:
-  #     - "../brewblox-devcon-spark/:/app/"
+  #     - ../brewblox-devcon-spark/brewblox_devcon_spark:/app/brewblox_devcon_spark
