handle numeric digital state in quick actions

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "spark:load": "node dev/spark_load.js",
     "spark": "npm run spark:load",
     "compose:setup": "npm run datastore && npm run history && npm run spark",
-    "compose:new": "docker-compose down && npm run makecert && docker-compose up -d && npm run compose:setup",
+    "compose:new": "npm run makecert && docker-compose up -d --force-recreate && npm run compose:setup",
     "serve": "quasar dev",
     "start": "npm run compose:new && npm run serve",
     "build": "quasar build",
