--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "svg-path-properties": "^0.4.11",
     "url-safe-string": "^1.1.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.3.4",
+    "vue-router": "^3.2.0",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.4.0"
   },
@@ -59,7 +59,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@quasar/app": "^1.9.6",
     "@quasar/quasar-app-extension-testing": "^1.0.0",
-    "@quasar/quasar-app-extension-testing-unit-jest": "^1.0.1",
+    "@quasar/quasar-app-extension-testing-unit-jest": "^1.1.0-beta.2",
     "@quasar/quasar-app-extension-typescript": "^1.0.2",
     "@types/d3": "^5.7.2",
     "@types/jest": "^23.3.14",
