--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,8 +11,7 @@ services:
       - ./dev/dist:/usr/share/nginx/html/ui
       - ./docker/conf/default.conf:/etc/nginx/conf.d/default.conf
     labels:
-      - "traefik.port=80"
-      - "traefik.frontend.rule=Path:/, /ui, /ui/{sub:(.*)?}"
+      - traefik.http.routers.ui.rule=PathPrefix(`/ui`) || Path(`/`)
 
   # mdns:
   #   image: brewblox/brewblox-mdns:develop
