--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "compose:new": "npm run makecert && docker-compose up -d --force-recreate && npm run compose:setup",
     "serve": "quasar dev",
     "start": "npm run compose:new && npm run serve",
-    "build": "quasar build",
-    "devbuild": "rm -r dev/dist/*; quasar build && cp -r dist/* dev/dist/",
+    "build": "npm run makecert && quasar build",
+    "devbuild": "rm -r dev/dist/*; npm run build && cp -r dist/* dev/dist/",
     "test": "npm run test:unit",
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ./src ./test",
     "lint:fix": "npm run lint -- --fix",
