--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@quasar/extras": "^1.8.2",
     "axios": "^0.19.2",
+    "brace": "^0.11.1",
     "core-js": "^3.6.5",
     "dagre-d3": "^0.6.4",
     "fromentries": "^1.2.0",
@@ -50,6 +51,7 @@
     "svg-path-properties": "^0.4.11",
     "url-safe-string": "^1.1.0",
     "vue": "^2.6.11",
+    "vue-json-pretty": "^1.6.5",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.5.1"
