--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "makecert": "bash dev/makecert.sh",
     "history": "node dev/history_config.js",
     "datastore:config": "node dev/datastore_config.js",
+    "redis:load": "node dev/redis_load.js",
     "datastore:load": "node dev/datastore_load.js",
     "datastore:save": "node dev/datastore_save.js",
     "datastore": "npm run datastore:config && npm run datastore:load",
     "spark:save": "node dev/spark_save.js",
     "spark:load": "node dev/spark_load.js",
     "spark": "npm run spark:load",
-    "compose:setup": "npm run datastore && npm run history && npm run spark",
+    "compose:setup": "npm run redis:load && npm run history && npm run spark",
     "compose:new": "npm run makecert && docker-compose up -d --force-recreate && npm run compose:setup",
     "serve": "quasar dev",
     "start": "npm run compose:new && npm run serve",
