--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -19,6 +19,14 @@ services:
   #     - "../brewblox-automation:/app"
   #   entrypoint: 'npm run watch'
 
+  # datastore:
+  #   image: treehouses/couchdb:2.3.1
+  #   labels:
+  #     - traefik.http.services.datastore.loadbalancer.server.port=5984
+  #     - traefik.http.routers.datastore.middlewares=prefix-strip
+  #   volumes:
+  #     - ./dev/couchdb/:/opt/couchdb/data/
+
   # sparksimulator:
   #   image: brewblox/firmware-simulator:feature-multiplatform
   #   init: true
