Use npm run dev for automation dev mode

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -17,7 +17,7 @@ services:
   #   image: brewblox/brewblox-automation:develop
   #   volumes:
   #     - "../brewblox-automation:/app"
-  #   entrypoint: 'npm run watch'
+  #   entrypoint: 'npm run dev'
 
   # datastore:
   #   image: treehouses/couchdb:2.3.1
