use unique id in firmware update dialog

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "portal-vue": "^1.5.1",
     "quasar": "^1.14.0",
     "query-string": "^6.13.2",
+    "shortid": "^2.2.15",
     "svg-path-properties": "^0.4.11",
     "typescript-string-enums": "^1.0.0",
     "url-safe-string": "^1.1.0",
@@ -73,6 +74,7 @@
     "@types/lodash": "^4.14.161",
     "@types/node": "11.9.5",
     "@types/plotly.js": "^1.50.18",
+    "@types/shortid": "0.0.29",
     "@types/webpack": "^4.41.22",
     "@types/webpack-chain": "^5.2.0",
     "@types/webpack-env": "^1.15.3",
