--- a/docker/conf/default.conf
+++ b/docker/conf/default.conf
@@ -6,6 +6,15 @@ server {
   index index.html;
 
   server_name brewblox;
+  access_log off;
+  gzip on;
+  gzip_types
+    text/plain
+    application/javascript
+    application/x-javascript
+    text/javascript
+    text/xml
+    text/css;
 
   # Add /ui prefix if missing
   location ~* ^/(?!(ui)) {
@@ -30,9 +39,10 @@ server {
 
   # Basic cache-control for static files
   location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
+    sendfile on;
+    tcp_nopush on;
     expires max;
     add_header Pragma public;
     add_header Cache-Control "public, must-revalidate, proxy-revalidate";
   }
-
 }
