add fonts to static types

--- a/docker/conf/default.conf
+++ b/docker/conf/default.conf
@@ -14,7 +14,9 @@ server {
     application/x-javascript
     text/javascript
     text/xml
-    text/css;
+    text/css
+    font/woff
+    font/woff2;
 
   # Add /ui prefix if missing
   location ~* ^/(?!(ui)) {
@@ -38,7 +40,7 @@ server {
   }
 
   # Basic cache-control for static files
-  location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
+  location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?)$ {
     sendfile on;
     tcp_nopush on;
     expires max;
