gzip_min_length

--- a/docker/conf/default.conf
+++ b/docker/conf/default.conf
@@ -8,6 +8,7 @@ server {
   server_name brewblox;
   access_log off;
   gzip on;
+  gzip_min_length 1000;
   gzip_types
     text/plain
     application/javascript
