no need for gzipping woff

--- a/docker/conf/default.conf
+++ b/docker/conf/default.conf
@@ -15,9 +15,7 @@ server {
     application/x-javascript
     text/javascript
     text/xml
-    text/css
-    font/woff
-    font/woff2;
+    text/css;
 
   # Add /ui prefix if missing
   location ~* ^/(?!(ui)) {
