--- a/docker/conf/default.conf
+++ b/docker/conf/default.conf
@@ -8,7 +8,8 @@ server {
   server_name brewblox;
   access_log off;
   gzip on;
-  gzip_min_length 1000;
+  gzip_vary on;
+  gzip_min_length 10240;
   gzip_types
     text/plain
     application/javascript
