--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,6 @@ node_modules
 /dist
 /devdist
 
-/tests/e2e/videos/
-/tests/e2e/screenshots/
-
-/src-cordova/platforms
-/src-cordova/plugins
-/src-cordova/www
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -25,6 +18,10 @@ yarn-error.log*
 *.njsproj
 *.sln
 
-influxdb/
-
-src/build-env.json
+# Files in dev/ have to be whitelisted
+dev/*
+!dev/*.js
+!dev/*.sh
+!dev/*.ts
+!dev/dist/.gitkeep
+!dev/traefik/traefik-cert.yaml
