--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,7 +4,6 @@
     "editorconfig.editorconfig",
     "syler.sass-indented",
     "orta.vscode-jest",
-    "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint"
   ]
 }
