--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,9 +12,9 @@ services:
       - ./docker/conf/default.conf:/etc/nginx/conf.d/default.conf
     labels:
       - traefik.http.routers.ui.rule=PathPrefix(`/ui`) || Path(`/`)
-  # nodered:
+  # node-red:
   #   volumes:
-  #     - ./dev/nodered:/data
+  #     - ./dev/node-red:/data
   #     - ../node-red-contrib-brewblox:/node-red-contrib-brewblox
   # automation:
   #   image: brewblox/brewblox-automation:develop
