user-configurable keyboard layout; store sys config in db

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "query-string": "^6.13.7",
     "shortid": "^2.2.16",
     "simple-keyboard": "^2.32.54",
+    "simple-keyboard-layouts": "^1.15.71",
     "svg-path-properties": "^0.4.11",
     "typescript-string-enums": "^1.0.0",
     "url-safe-string": "^1.1.0",
