--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,7 +72,7 @@ steps:
     --tag $(DOCKER_REPO):$(TAG)
     --build-arg service_info="$(git describe) @ $(date)"
     --push
-    --platform linux/amd64,linux/arm/v7
+    --platform linux/amd64,linux/arm/v7,linux/arm64/v8
     docker
   displayName: Build Docker images
   condition: and(succeeded(), variables['BRANCH'])
