--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@quasar/quasar-app-extension-testing-unit-jest": "^1.1.0-beta.7",
     "@quasar/quasar-app-extension-typescript": "^1.0.2",
     "@types/d3": "^5.16.4",
+    "@types/dagre-d3": "^0.6.2",
     "@types/jest": "^23.3.14",
     "@types/js-quantities": "^1.6.2",
     "@types/lodash": "^4.14.168",
