--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "dagre-d3": "^0.6.4",
+    "dompurify": "^2.2.7",
     "fromentries": "^1.3.2",
     "js-quantities": "^1.7.6",
     "lodash": "^4.17.21",
@@ -62,6 +63,7 @@
     "@quasar/quasar-app-extension-typescript": "^1.0.2",
     "@types/d3": "^5.16.4",
     "@types/dagre-d3": "^0.6.2",
+    "@types/dompurify": "^2.2.1",
     "@types/jest": "^23.3.14",
     "@types/js-quantities": "^1.6.2",
     "@types/lodash": "^4.14.168",
