--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watch\""
   },
   "dependencies": {
-    "@quasar/extras": "^1.9.18",
+    "@quasar/extras": "^1.10.4",
     "axios": "^0.21.1",
-    "core-js": "^3.9.1",
+    "core-js": "^3.11.0",
     "dagre-d3": "^0.6.4",
-    "dompurify": "^2.2.7",
+    "dompurify": "^2.2.8",
     "fromentries": "^1.3.2",
     "js-quantities": "^1.7.6",
     "lodash": "^4.17.21",
@@ -45,7 +45,7 @@
     "nanoid": "^3.1.22",
     "parse-duration": "^0.1.3",
     "plotly.js-basic-dist": "^1.58.4",
-    "quasar": "^2.0.0-beta.12",
+    "quasar": "^2.0.0-beta.13",
     "query-string": "^6.14.1",
     "simple-keyboard": "^2.32.119",
     "simple-keyboard-layouts": "^1.15.155",
@@ -56,9 +56,9 @@
     "vuedraggable": "^4.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
+    "@babel/core": "^7.13.16",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@quasar/app": "^3.0.0-beta.13",
+    "@quasar/app": "^3.0.0-beta.17",
     "@quasar/quasar-app-extension-typescript": "^1.0.2",
     "@types/d3": "^5.16.4",
     "@types/dagre-d3": "^0.6.2",
@@ -73,28 +73,28 @@
     "@types/webpack": "^4.41.27",
     "@types/webpack-chain": "^5.2.0",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "@typescript-eslint/parser": "^4.21.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "@vue/devtools": "^6.0.0-beta.6",
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-plugin-transform-imports": "^1.5.1",
-    "eslint": "^7.23.0",
+    "eslint": "^7.25.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-simple-import-sort": "^4.0.0",
-    "eslint-plugin-vue": "^7.8.0",
-    "eslint-webpack-plugin": "^2.5.3",
+    "eslint-plugin-vue": "^7.9.0",
+    "eslint-webpack-plugin": "^2.5.4",
     "fibers": "^4.0.3",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "jest": "^25.5.4",
     "minimist": "^1.2.5",
+    "node-polyfill-webpack-plugin": "^1.1.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "svgpath": "^2.3.1",
-    "ts-loader": "^6.2.2",
     "tsutils": "^3.20.0",
     "vue-template-compiler": "^2.6.12",
     "vuex-class-modules": "^1.2.0"
