--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "@typescript-eslint/parser": "^4.22.0",
     "@vue/devtools": "^6.0.0-beta.6",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/test-utils": "^2.0.0-rc.6",
+    "babel-jest": "^26.6.3",
     "babel-plugin-transform-imports": "^1.5.1",
     "eslint": "^7.25.0",
     "eslint-config-standard": "^16.0.2",
@@ -89,13 +91,15 @@
     "eslint-webpack-plugin": "^2.5.4",
     "fibers": "^4.0.3",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
-    "jest": "^25.5.4",
+    "jest": "^26.6.3",
     "minimist": "^1.2.5",
     "node-polyfill-webpack-plugin": "^1.1.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "svgpath": "^2.3.1",
+    "ts-jest": "^26.5.6",
     "tsutils": "^3.20.0",
+    "vue-jest": "^5.0.0-alpha.8",
     "vue-template-compiler": "^2.6.12",
     "vuex-class-modules": "^1.2.0"
   },
