--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "nanoid": "^3.1.22",
     "parse-duration": "^0.1.3",
     "plotly.js-basic-dist": "^1.58.4",
-    "quasar": "^2.0.0-beta.13",
+    "quasar": "^2.0.0-beta.15",
     "query-string": "^6.14.1",
     "simple-keyboard": "^2.32.119",
     "simple-keyboard-layouts": "^1.15.155",
@@ -58,7 +58,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@quasar/app": "^3.0.0-beta.17",
+    "@quasar/app": "^3.0.0-beta.20",
     "@quasar/quasar-app-extension-typescript": "^1.0.2",
     "@types/d3": "^5.16.4",
     "@types/dagre-d3": "^0.6.2",
@@ -70,8 +70,6 @@
     "@types/nanoid": "^2.1.0",
     "@types/node": "11.9.5",
     "@types/plotly.js": "^1.54.9",
-    "@types/webpack": "^4.41.27",
-    "@types/webpack-chain": "^5.2.0",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -101,7 +99,8 @@
     "tsutils": "^3.20.0",
     "vue-jest": "^5.0.0-alpha.8",
     "vue-template-compiler": "^2.6.12",
-    "vuex-class-modules": "^1.2.0"
+    "vuex-class-modules": "^1.2.0",
+    "webpack-bundle-analyzer": "^4.4.1"
   },
   "engines": {
     "node": ">= 14",
