--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "test": "npm run test:unit",
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ./src ./test",
     "lint:fix": "npm run lint -- --fix",
-    "lint:nowarn": "npm run lint 2>&1 | grep -v '.*MaxListenersExceededWarning'",
     "test:unit": "jest --updateSnapshot",
     "test:unit:coverage": "jest --coverage",
     "test:unit:watch": "jest --watch",
@@ -44,7 +43,7 @@
     "mqtt": "^4.2.6",
     "nanoid": "^3.1.22",
     "parse-duration": "^0.1.3",
-    "plotly.js-basic-dist": "^1.58.4",
+    "plotly.js": "^1.58.4",
     "quasar": "^2.0.0-beta.15",
     "query-string": "^6.14.1",
     "simple-keyboard": "^2.32.119",
