--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@quasar/extras": "^1.10.4",
     "axios": "^0.21.1",
+    "buffer": "^6.0.3",
     "core-js": "^3.11.0",
     "dagre-d3": "^0.6.4",
     "dompurify": "^2.2.8",
@@ -44,6 +45,7 @@
     "nanoid": "^3.1.22",
     "parse-duration": "^0.1.3",
     "plotly.js": "^1.58.4",
+    "process": "^0.11.10",
     "quasar": "^2.0.0-beta.15",
     "query-string": "^6.14.1",
     "simple-keyboard": "^2.32.119",
@@ -90,7 +92,6 @@
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "jest": "^26.6.3",
     "minimist": "^1.2.5",
-    "node-polyfill-webpack-plugin": "^1.1.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "svgpath": "^2.3.1",
