add simulated tilt service to dev env

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -43,3 +43,6 @@ services:
   #   volumes:
   #     - ../brewblox-devcon-spark/binaries:/app/binaries
   #     - ../brewblox-devcon-spark/brewblox_devcon_spark:/app/brewblox_devcon_spark
+  # tilt:
+  #   volumes:
+  #     - ../brewblox-tilt:/app
