--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nanoid": "^3.1.22",
     "parse-duration": "^0.1.3",
     "plotly.js": "^1.58.4",
+    "portal-vue": "^3.0.0-alpha.0",
     "process": "^0.11.10",
     "quasar": "^2.0.0-beta.15",
     "query-string": "^6.14.1",
