--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watch\""
   },
   "dependencies": {
-    "@quasar/extras": "^1.10.6",
+    "@quasar/extras": "^1.10.7",
     "axios": "^0.21.1",
     "buffer": "^6.0.3",
-    "core-js": "^3.14.0",
+    "core-js": "^3.15.0",
     "dagre-d3": "^0.6.4",
     "date-fns": "^2.22.1",
     "dompurify": "^2.2.9",
@@ -42,26 +42,26 @@
     "js-quantities": "^1.7.6",
     "lodash": "^4.17.21",
     "marked": "^0.7.0",
-    "mqtt": "^4.2.6",
+    "mqtt": "^4.2.8",
     "nanoid": "^3.1.23",
     "parse-duration": "^0.1.3",
     "plotly.js": "^1.58.4",
     "portal-vue": "^3.0.0-alpha.0",
     "process": "^0.11.10",
-    "quasar": "^2.0.0-rc.1",
+    "quasar": "^2.0.0",
     "simple-keyboard": "^2.32.119",
     "simple-keyboard-layouts": "^1.15.155",
     "svg-path-properties": "^1.0.11",
     "typescript-string-enums": "^1.0.0",
-    "vue-router": "^4.0.8",
-    "vuedraggable": "^4.0.1",
-    "vuex": "^4.0.1",
+    "vue-router": "^4.0.10",
+    "vuedraggable": "^4.0.3",
+    "vuex": "^4.0.2",
     "vuex-class-modules": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
+    "@babel/core": "^7.14.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@quasar/app": "^3.0.0-rc.1",
+    "@quasar/app": "^3.0.0",
     "@quasar/quasar-app-extension-typescript": "^1.0.2",
     "@types/d3": "^5.16.4",
     "@types/dagre-d3": "^0.6.2",
@@ -74,21 +74,21 @@
     "@types/node": "11.9.5",
     "@types/plotly.js": "^1.54.9",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "@vue/devtools": "^6.0.0-beta.13",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "@vue/devtools": "^6.0.0-beta.14",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-rc.6",
+    "@vue/test-utils": "^2.0.0-rc.8",
     "babel-jest": "^26.6.3",
     "babel-plugin-transform-imports": "^1.5.1",
-    "eslint": "^7.28.0",
+    "eslint": "^7.29.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-simple-import-sort": "^4.0.0",
-    "eslint-plugin-vue": "^7.10.0",
+    "eslint-plugin-vue": "^7.11.1",
     "eslint-webpack-plugin": "^2.5.4",
     "fibers": "^4.0.3",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
