--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,7 +12,15 @@ services:
       - ./docker/conf/default.conf:/etc/nginx/conf.d/default.conf
     labels:
       - traefik.http.routers.ui.rule=PathPrefix(`/ui`) || Path(`/`)
-  # node-red:
+  victoria:
+    image: victoriametrics/victoria-metrics
+    volumes:
+      - ./dev/victoria:/victoria-metrics-data
+    command: --opentsdbListenAddr=:4242 --retentionPeriod=6
+    labels:
+      - traefik.http.routers.datastore.middlewares=prefix-strip
+      - traefik.http.services.prometheus.loadbalancer.server.port=8428
+      # node-red:
   #   volumes:
   #     - ./dev/node-red:/data
   #     - ../node-red-contrib-brewblox:/node-red-contrib-brewblox
@@ -29,9 +37,9 @@ services:
   #   init: true
   #   ports:
   #     - "7376:7376"
-  # history:
-  #   volumes:
-  #     - ../brewblox-history:/app
+  history:
+    volumes:
+      - ../brewblox-history:/app
   # sparkey:
   #   ports:
   #     - "5678:5678"
