--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
   "license": "GPL-3.0",
   "scripts": {
     "makecert": "bash dev/makecert.sh",
-    "history": "node dev/history_config.js",
     "redis:load": "node dev/redis_load.js",
     "redis:save": "node dev/redis_save.js",
     "redis": "npm run redis:load",
     "spark:save": "node dev/spark_save.js",
     "spark:load": "node dev/spark_load.js",
     "spark": "npm run spark:load",
-    "compose:setup": "npm run redis && npm run history && npm run spark",
+    "compose:setup": "npm run redis && npm run spark",
     "compose:new": "npm run makecert && docker-compose up -d --force-recreate && npm run compose:setup",
     "serve": "quasar dev",
     "start": "npm run compose:new && npm run serve",
