--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,15 +12,7 @@ services:
       - ./docker/conf/default.conf:/etc/nginx/conf.d/default.conf
     labels:
       - traefik.http.routers.ui.rule=PathPrefix(`/ui`) || Path(`/`)
-  victoria:
-    image: victoriametrics/victoria-metrics
-    volumes:
-      - ./dev/victoria:/victoria-metrics-data
-    command: --opentsdbListenAddr=:4242 --retentionPeriod=6
-    labels:
-      - traefik.http.routers.datastore.middlewares=prefix-strip
-      - traefik.http.services.prometheus.loadbalancer.server.port=8428
-      # node-red:
+  # node-red:
   #   volumes:
   #     - ./dev/node-red:/data
   #     - ../node-red-contrib-brewblox:/node-red-contrib-brewblox
@@ -38,6 +30,7 @@ services:
   #   ports:
   #     - "7376:7376"
   history:
+    image: brewblox/brewblox-history:local
     volumes:
       - ../brewblox-history:/app
   # sparkey:
