--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
   "vetur.format.defaultFormatter.js": "vscode-typescript",
   "vetur.format.defaultFormatter.ts": "vscode-typescript",
   "vetur.experimental.templateInterpolationService": true,
+  "vetur.languageFeatures.codeActions": false,
+  "jest.autoRun": {},
   "eslint.run": "onType",
   "eslint.validate": [
     "vue",
