use feature branch in override

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -30,7 +30,7 @@ services:
   #   ports:
   #     - "7376:7376"
   history:
-    image: brewblox/brewblox-history:local
+    image: brewblox/brewblox-history:feature-victoria-metrics
     volumes:
       - ../brewblox-history:/app
   # sparkey:
