--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -29,10 +29,10 @@ services:
   #   init: true
   #   ports:
   #     - "7376:7376"
-  history:
-    image: brewblox/brewblox-history:feature-victoria-metrics
-    volumes:
-      - ../brewblox-history:/app
+  # history:
+  #   image: brewblox/brewblox-history:develop
+  #   volumes:
+  #     - ../brewblox-history:/app
   # sparkey:
   #   ports:
   #     - "5678:5678"
