--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,9 @@ steps:
   displayName: NPM build
 
 - bash: |
-    curl -fsSL https://raw.githubusercontent.com/BrewBlox/deployed-images/develop/prepare_buildx.sh | bash
+    docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+    docker buildx create --use
+    docker buildx inspect --bootstrap
   displayName: Prepare buildx
   condition: and(succeeded(), variables.BRANCH)
 
@@ -64,7 +66,6 @@ steps:
 - bash: >-
     docker buildx build
     --tag $(DOCKER_REPO):$(TAG)
-    --build-arg service_info="$(git describe) @ $(date)"
     --push
     --platform linux/amd64,linux/arm/v7,linux/arm64/v8
     docker
