--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "typescript.tsdk": "./node_modules/typescript/lib",
+  "volar.autoCompleteRefs": false,
   "vetur.format.defaultFormatter.html": "none",
   "vetur.format.defaultFormatter.js": "vscode-typescript",
   "vetur.format.defaultFormatter.ts": "vscode-typescript",
@@ -11,12 +11,6 @@
   "vetur.languageFeatures.codeActions": false,
   "jest.autoRun": {},
   "eslint.run": "onType",
-  "eslint.validate": [
-    "vue",
-    "html",
-    "javascript",
-    "typescript"
-  ],
   "[typescript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
@@ -24,6 +18,6 @@
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "[vue]": {
-    "editor.defaultFormatter": "octref.vetur"
-  },
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  }
 }
