--- a/package.json
+++ b/package.json
@@ -80,10 +80,11 @@
     "@vue/test-utils": "^2.0.0-rc.8",
     "babel-jest": "^26.6.3",
     "babel-plugin-transform-imports": "^1.5.1",
-    "eslint": "^7.29.0",
+    "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-simple-import-sort": "^4.0.0",
