--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "simple-keyboard": "^2.32.119",
     "simple-keyboard-layouts": "^1.15.155",
     "svg-path-properties": "^1.0.11",
+    "timezones": "nayarsystems/posix_tz_db#master",
     "typescript-string-enums": "^1.0.0",
     "vue-router": "^4.0.11",
     "vuedraggable": "^4.1.0",
