--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,8 @@
   "volar.autoCompleteRefs": false,
   "volar.codeLens.scriptSetupTools": false,
   "volar.codeLens.pugTools": false,
-  "volar.tsPlugin": true,
   "volar.checkVueTscVersion": true,
+  "volar.takeOverBuiltinTsExtension": true,
   "eslint.run": "onType",
   "html.autoClosingTags": true,
   "[vue]": {
