--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "axios": "^0.21.1",
     "buffer": "^6.0.3",
     "core-js": "^3.16.3",
-    "dagre-d3": "^0.6.4",
+    "d3": "^7.0.3",
     "date-fns": "^2.23.0",
     "dompurify": "^2.3.1",
+    "elkjs": "^0.7.1",
     "fromentries": "^1.3.2",
     "js-quantities": "^1.7.6",
     "lodash": "^4.17.21",
@@ -64,7 +65,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@quasar/app": "^3.1.0",
     "@quasar/quasar-app-extension-typescript": "^1.0.2",
-    "@types/d3": "^5.16.4",
+    "@types/d3": "^7.0.0",
     "@types/dagre-d3": "^0.6.3",
     "@types/dompurify": "^2.2.3",
     "@types/jest": "^23.3.14",
