restrict jest autorunning

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,9 @@
   },
   "[javascript]": {
     "editor.defaultFormatter": "rvest.vs-code-prettier-eslint"
+  },
+  "jest.autoRun": {
+    "watch": false,
+    "onSave": "test-file"
   }
 }
